Update discord token

--- a/WotStatistics/Execute/Settings.resx
+++ b/WotStatistics/Execute/Settings.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="DisToken" xml:space="preserve">
-    <value>NjQzNDU4NTYwMTQzMTMwNjQ4.XcoSVw.qma4P25BBkyeqVRyR67piKCeyFo</value>
+    <value>NjQzNDU4NTYwMTQzMTMwNjQ4.XdEiiA.XNLOGkWJK8LggTD3hv6dSWgBbZQ</value>
   </data>
 </root>
