Added encryption and decryption

--- a/WotStatistics/Execute/Settings.resx
+++ b/WotStatistics/Execute/Settings.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="DisToken" xml:space="preserve">
-    <value>NjQzNDU4NTYwMTQzMTMwNjQ4.XdLOlQ.Q2_GX5YYuK5gvxuKnD7OQmFuriM</value>
+    <value>23QZ5yf1XW/hcKkkmwpeUXL6Yn0rUC3VKHBoa9Z/vG7Yu0vlwAW7eVNYFgXUQXroRdHIJ8JNOUR6FZYYVRi7xUO6QLTDserBzsGNw3WS7v5fEeon22UHbGZj9QiP2vU8</value>
   </data>
 </root>
