--- a/WotStatistics/WargaminAPI/Properties/Resources.resx
+++ b/WotStatistics/WargaminAPI/Properties/Resources.resx
@@ -126,6 +126,9 @@
   <data name="uri_get_stat" xml:space="preserve">
     <value>https://api.worldoftanks.ru/wot/account/info/?application_id=</value>
   </data>
+  <data name="uri_get_stat_clan" xml:space="preserve">
+    <value>https://api.worldoftanks.ru/wot/clanratings/clans/?application_id=</value>
+  </data>
   <data name="url_find_player" xml:space="preserve">
     <value>https://api.worldoftanks.ru/wot/account/list/?application_id=</value>
   </data>
